--- a/index.html
+++ b/index.html
@@ -134,21 +134,21 @@
           <p>If you do it right, it will last forever.</p>
           <div class="por-content">
             <div class="card">
-                <img src="./images/1.jpg" alt="project photo">
+                <img src="./images/shuffle-01.jpg" alt="project photo">
                 <div class="info">
                   <h3>Project Here</h3>
                   <p>Lorem ipsum dolor sit amet, consectetu voluptates, hic incidunt modi nostrum, quaerat accusantium nesciunt?</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./images/1.jpg" alt="project photo">
+                <img src="./images/shuffle-02.jpg" alt="project photo">
                 <div class="info">
                   <h3>Project Here</h3>
                   <p>Lorem ipsum dolor sitquasi, earum impedit autem rerum! Repellendus quisquam et tenetur perferendis nobis.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="./images/1.jpg" alt="project photo">
+                <img src="./images/shuffle-03.jpg" alt="project photo">
                 <div class="info">
                   <h3>Project Here</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis repellat est cum, nostrum excepturi nemo</p>
@@ -201,5 +201,6 @@
       <!-- stert footer -->
       <div class="footer">&copy; 2021 <span>Leon</span> Right Reserved</div>
       <!-- end footer -->
-</body>
+  <script src="./main.js"></script>
+  </body>
 </html>
